reformat code to 2 space indents